# bahulu-berry-cameron-ai-assistant

./: .gitignore  main.py
app/api/: router.py
app/api/routes/: auth.py  customers.py  dashboard.py  inventories.py  order_items.py  orders.py  products.py
app/auth/: dependencies.py  jwt.py
app/constants/: order.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  admin.py  customer.py  inventory.py  order.py  order_item.py  product.py
app/schemas/: __init__.py  admin.py  customer.py  dashboard.py  inventory.py  order.py  order_item.py  pagination.py  product.py
app/services/: inventory_services.py
backend/: main.py  pyproject.toml
backend/app/api/: router.py
backend/app/api/routes/: auth.py  customers.py  dashboard.py  inventories.py  order_items.py  orders.py  products.py
backend/app/auth/: dependencies.py  jwt.py  password.py
backend/app/constants/: order.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  admin.py  customer.py  inventory.py  order.py  order_item.py  product.py
backend/app/schemas/: __init__.py  admin.py  customer.py  dashboard.py  inventory.py  order.py  order_item.py  pagination.py  product.py
backend/app/services/: inventory_services.py
frontend/: package-lock.json  package.json
frontend-old/: package.json
frontend-old/src/: main.jsx
frontend-old/src/api/: auth.js  axios.js
frontend-old/src/components/: StatCard.jsx
frontend-old/src/context/: AuthContext.jsx
frontend-old/src/hooks/: useAuth.js
frontend/src/: main.tsx  theme.ts
(+51 files in other folders)
