[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[all]>=0.139.0",
    "greenlet>=3.5.3",
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
